Fix line spacing

--- a/src/assets/styles/components/_page.scss
+++ b/src/assets/styles/components/_page.scss
@@ -17,6 +17,6 @@
     }
 
     &__content > * + * {
-        margin-top: 1rem;
+        margin-top: 2.2rem;
     }
 }
